# async_pub_sub

./: Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: publish.yml  release-plz.yml  rust.yml
async_pub_sub/: CHANGELOG.md  Cargo.toml  README.md
async_pub_sub/examples/client_server_pub_sub_example/: cache.rs  data_consumer.rs  data_producer.rs  main.rs  persistency.rs  timer.rs
async_pub_sub/src/: lib.rs
async_pub_sub/src/publisher/: mod.rs  publisher_impl.rs  publisher_trait.rs  publisher_types.rs
async_pub_sub/src/publisher/publisher_middlewares/: debug_publisher.rs  logging_publisher.rs  mod.rs  publisher_builder.rs
async_pub_sub/src/subscriber/: mod.rs  subscriber_impl.rs  subscriber_trait.rs
async_pub_sub/src/subscriber/subscriber_impl/: simple_subscriber.rs
async_pub_sub/src/subscriber/subscriber_middlewares/: debug_subscriber.rs  logging_subscriber.rs  mod.rs  subscriber_builder.rs
async_pub_sub/src/utils/: forwarder.rs  middleware.rs  mod.rs
async_pub_sub/src/utils/forwarder/: forwarder_impl.rs  forwarder_trait.rs  mod.rs
async_pub_sub/src/utils/forwarder/forwarder_middlewares/: debug_forwarder.rs  forwarder_builder.rs  mod.rs
async_pub_sub/tests/: 01_direct_pub_sub_usage.rs  02_logging_subscriber_decorator.rs  03_logging_publisher_decorator.rs  04_concurrent_pub_sub.rs  05_request_publisher.rs  06_message_forwarder.rs  07_multiple_publisher.rs  08_pub_sub_wrappers.rs  09_direct_rpc.rs  10_middleware_layering.rs  11_rpc_client_objects.rs  12_rpc_server_objects.rs  13_rpc_macros.rs  14_forwarder_test.rs  14_multi_pub_wrapper.rs  15_multi_subscriber_wrapper.rs  16_logging_rpc_macros.rs  17_boxed_publisher.rs  18_subscriber_publisher_rpc_server.rs  19_internal_communication.rs
async_pub_sub_macros/: CHANGELOG.md  Cargo.toml  README.md
async_pub_sub_macros/src/: helpers.rs  lib.rs  publisher.rs  route.rs  rpc.rs  subscriber.rs
async_pub_sub_macros/tests/: tests.rs
async_pub_sub_macros/tests/expand/: multi_publisher.expanded.rs  multi_publisher.rs  multi_publisher_with_attribute.expanded.rs  multi_publisher_with_attribute.rs  multi_subscriber.expanded.rs  multi_subscriber.rs  publisher.expanded.rs  publisher.rs  publisher_with_attribute.expanded.rs  publisher_with_attribute.rs  routes.expanded.rs  routes.rs  rpc.expanded.rs  rpc.rs  rpc_with_derives.expanded.rs  rpc_with_derives.rs  subscriber.expanded.rs  subscriber.rs
async_pub_sub_macros/tests/fail/: derive_subscriber_on_enum.rs  derive_subscriber_on_enum.stderr  derive_subscriber_on_unamed_field_struct.rs  derive_subscriber_on_unamed_field_struct.stderr  derive_subscriber_on_unit_struct.rs  derive_subscriber_on_unit_struct.stderr  missing_bound_types_on_generic_multi_subscriber.rs  missing_bound_types_on_generic_multi_subscriber.stderr  missing_publisher.rs  missing_publisher.stderr  missing_subscriber.rs  missing_subscriber.stderr  rpc_method_with_ref_arg.rs  rpc_method_with_ref_arg.stderr  rpc_method_with_ref_return.rs  rpc_method_with_ref_return.stderr
src/: lib.rs
src/publisher/: mod.rs  publisher_impl.rs  publisher_trait.rs
src/subscriber/: subscriber_trait.rs
src/utils/: forwarder.rs  mod.rs
tests/: 01_direct_pub_sub_usage.rs  02_logging_subscriber_decorator.rs  03_logging_publisher_decorator.rs  04_concurrent_pub_sub.rs  05_request_publisher.rs  06_message_forwarder.rs  08_pub_sub_wrappers.rs  09_direct_rpc.rs  10_middleware_layering.rs  11_rpc_client_objects.rs  11_rpc_objects.rs  12_rpc_server_objects.rs  13_rpc_macros.rs
tokio_implementations/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
tokio_pub_sub/: Cargo.toml
tokio_pub_sub/src/: lib.rs
tokio_pub_sub/tests/: 02_logging_subscriber_decorator.rs  03_logging_publisher_decorator.rs  05_request_publisher.rs  06_message_forwarder.rs  07_multiple_publisher.rs  08_pub_sub_wrappers.rs  09_direct_rpc.rs  (+8 more)
tokio_pub_sub_macros/: Cargo.toml
(+53 files in other folders)
