[package]
name = "async_pub_sub"
version = "0.1.0"
edition = "2021"

[features]
macros = ["async_pub_sub_macros"]

[dependencies]
futures = "0.3.31"
log = "0.4.26"
async_pub_sub_macros = { path = "../async_pub_sub_macros", optional = true }

[dev-dependencies]
env_logger = "0.11.7"
rand = "0.9.0"
test-log = "0.2.17"
tokio = { version = "1.34", features = ["full"] }
async_pub_sub_macros = { path = "../async_pub_sub_macros" }
