[package]
name = "async_pub_sub"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A library aiming at making async pub-sub easier in Rust"
repository = "https://github.com/pngouembe/async_pub_sub/tree/main/async_pub_sub"
readme = "README.md"
keywords = ["async", "pub-sub"]
categories = ["asynchronous"]

[features]
macros = ["async_pub_sub_macros"]

[dependencies]
futures = "0.3.31"
log = "0.4.26"
async_pub_sub_macros = { version = "0.1.0", path = "../async_pub_sub_macros", optional = true }

[dev-dependencies]
env_logger = "0.11.7"
rand = "0.9.0"
test-log = "0.2.17"
tokio = { version = "1.34", features = ["full"] }
async_pub_sub_macros = { version = "0.1.0", path = "../async_pub_sub_macros" }
