[package]
name = "async_pub_sub"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"
description = "A library aiming at making async pub-sub easier in Rust"
repository = "https://github.com/pngouembe/async_pub_sub/tree/main/async_pub_sub"
readme = "README.md"
keywords = ["async", "pub-sub"]
categories = ["asynchronous"]

[features]
macros = ["async_pub_sub_macros"]
default = ["macros"]

[dependencies]
futures = "0.3.31"
log = "0.4.26"
async_pub_sub_macros = { version = "0.1.0", path = "../async_pub_sub_macros", optional = true }

[dev-dependencies]
rand = "0.9.0"
test-log = "0.2.17"
tokio = { version = "1.34", features = ["full"] }
async_pub_sub_macros = { version = "0.1.0", path = "../async_pub_sub_macros" }
simplelog = { version = "0.12.2", features = ["termcolor"] }

[[example]]
name = "client_server"
path = "examples/client_server_pub_sub_example/main.rs"
required-features = ["macros"]
