[package]
name = "async_pub_sub_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"

[dev-dependencies]
macrotest = "1.1.0"
trybuild = "1.0"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
async_pub_sub = { path = "../async_pub_sub" }
