[package]
name = "async_pub_sub_macros"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A library containing macros used by the async_pub_sub library to make async pub-sub easier in Rust"
repository = "https://github.com/pngouembe/async_pub_sub/tree/main/async_pub_sub_macros"
readme = "README.md"
keywords = ["async", "pub-sub", "macros"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"
futures = "0.3.31"

[dev-dependencies]
macrotest = "1.1.0"
trybuild = "1.0"
tokio-test = "0.4"
tokio = { version = "1.0", features = ["full"] }
async_pub_sub = { version = "0.1.0", path = "../async_pub_sub" }
